force-app/main/default/objects/PF_Tasks__c/PF_Tasks__c.object-meta.xml
<CustomObject>
    <description>This is where project times will be captured within the ProjectForce application.</description>
    <label>Time Sheet</label>
    <nameField>
        <label>Time Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>