force-app/main/default/objects/PF_Tasks__c/fields/PF_Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Actual_End_Date__c</fullName>
    <inlineHelpText>Select the actual end date for the work task.</inlineHelpText>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>