force-app/main/default/objects/PF_Tasks__c/fields/PF_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>PF_Actual_Hours__c</fullName>
    <inlineHelpText>Provide the actual hours it took to complete the work task.</inlineHelpText>
    <label>Actual Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>