force-app/main/default/objects/PF_Tasks__c/fields/PF_Calculated_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>PF_Calculated_Estimated_Hours__c</fullName>
    <formula>IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Configuration&#39;), ISPICKVAL( PF_Complexity__c , &#39;Simple&#39;)) , 10, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Configuration&#39;), ISPICKVAL( PF_Complexity__c , &#39;Medium&#39;)) , 20, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Configuration&#39;), ISPICKVAL( PF_Complexity__c , &#39;Complex&#39;)) , 40, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;VF Page/Component&#39;), ISPICKVAL( PF_Complexity__c ,&#39;Simple&#39;)) , 28, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;VF Page/Component&#39;), ISPICKVAL( PF_Complexity__c ,&#39;Medium&#39;)) , 50, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;VF Page/Component&#39;), ISPICKVAL( PF_Complexity__c ,&#39;Complex&#39;)) , 100, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Apex Class&#39;), ISPICKVAL( PF_Complexity__c , &#39;Simple&#39;)) , 30, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Apex Class&#39;), ISPICKVAL( PF_Complexity__c , &#39;Medium&#39;)) , 44, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Apex Class&#39;), ISPICKVAL( PF_Complexity__c , &#39;Complex&#39;)) , 80, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Web services/Apex call outs&#39;),ISPICKVAL( PF_Complexity__c , &#39;Simple&#39;)) , 34, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Web services/Apex call outs&#39;),ISPICKVAL( PF_Complexity__c , &#39;Medium&#39;)) , 56, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Web services/Apex call outs&#39;),ISPICKVAL( PF_Complexity__c , &#39;Complex&#39;)) ,100, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Trigger/Trigger helper&#39;),ISPICKVAL( PF_Complexity__c , &#39;Simple&#39;)) , 18, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Trigger/Trigger helper&#39;),ISPICKVAL( PF_Complexity__c , &#39;Medium&#39;)) , 36, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Trigger/Trigger helper&#39;),ISPICKVAL( PF_Complexity__c , &#39;Complex&#39;)) , 88, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Data Migration&#39;),ISPICKVAL( PF_Complexity__c , &#39;Simple&#39;)) , 72, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Data Migration&#39;),ISPICKVAL( PF_Complexity__c , &#39;Medium&#39;)) , 136, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Data Migration&#39;),ISPICKVAL( PF_Complexity__c , &#39;Complex&#39;)) , 418, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Integration&#39;),ISPICKVAL( PF_Complexity__c , &#39;Simple&#39;)) , 20, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Integration&#39;),ISPICKVAL( PF_Complexity__c , &#39;Medium&#39;)) , 84, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Integration&#39;),ISPICKVAL( PF_Complexity__c , &#39;Complex&#39;)) , 152, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Reporting &amp; Visualization&#39;),ISPICKVAL( PF_Complexity__c , &#39;Simple&#39;)) , 5, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Reporting &amp; Visualization&#39;),ISPICKVAL( PF_Complexity__c , &#39;Medium&#39;)) , 11, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;Reporting &amp; Visualization&#39;),ISPICKVAL( PF_Complexity__c , &#39;Complex&#39;)) , 30, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;UI Development&#39;),ISPICKVAL( PF_Complexity__c , &#39;Simple&#39;)) , 80, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;UI Development&#39;),ISPICKVAL( PF_Complexity__c , &#39;Medium&#39;)) , 120, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;UI Development&#39;),ISPICKVAL( PF_Complexity__c , &#39;Complex&#39;)) , 220, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;UX Design&#39;),ISPICKVAL( PF_Complexity__c , &#39;Simple&#39;)) , 60, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;UX Design&#39;),ISPICKVAL( PF_Complexity__c , &#39;Medium&#39;)) , 120, 
IF( And (ISPICKVAL(PF_Work_Type__c,&#39;UX Design&#39;),ISPICKVAL( PF_Complexity__c , &#39;Complex&#39;)) , 220, 
IF( ISPICKVAL( PF_Work_Type__c, &#39;Other&#39;) , PF_Estimate_Hours__c,0)))))))))))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>