force-app/main/default/objects/PF_Tasks__c/fields/PF_Complexity__c.field-meta.xml
<CustomField>
    <fullName>PF_Complexity__c</fullName>
    <inlineHelpText>Select a level of complexity.</inlineHelpText>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>