force-app/main/default/objects/PF_Tasks__c/fields/PF_Estimate_Hours__c.field-meta.xml
<CustomField>
    <fullName>PF_Estimate_Hours__c</fullName>
    <inlineHelpText>Provide an estimated number of hours.</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>