force-app/main/default/objects/PF_Tasks__c/fields/PF_Story__c.field-meta.xml
<CustomField>
    <fullName>PF_Story__c</fullName>
    <inlineHelpText>Select the related story for this work task.</inlineHelpText>
    <label>Story</label>
    <referenceTo>PF_Stories__c</referenceTo>
    <relationshipLabel>Work Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>