force-app/main/default/objects/PF_Tasks__c/fields/PF_Unit_Testing_Completed__c.field-meta.xml
<CustomField>
    <fullName>PF_Unit_Testing_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates that Unit testing corresponding to task is completed.</description>
    <inlineHelpText>Check this box if unit testing has been completed for this work task.</inlineHelpText>
    <label>Unit Testing Completed</label>
    <type>Checkbox</type>
</CustomField>