force-app/main/default/objects/PF_Tasks__c/fields/PF_Work_Task_Description__c.field-meta.xml
<CustomField>
    <fullName>PF_Work_Task_Description__c</fullName>
    <inlineHelpText>Provide a detailed inventory of the changes being requested in this work task.</inlineHelpText>
    <label>Work Task Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>