force-app/main/default/objects/PF_Tasks__c/fields/PF_Work_Task_Number__c.field-meta.xml
<CustomField>
    <fullName>PF_Work_Task_Number__c</fullName>
    <displayFormat>TS-{00000}</displayFormat>
    <inlineHelpText>This is the auto-generated identifier.</inlineHelpText>
    <label>Time Sheet Number</label>
    <type>AutoNumber</type>
</CustomField>