force-app/main/default/objects/PF_Tasks__c/fields/PF_Work_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>PF_Work_Task_Status__c</fullName>
    <inlineHelpText>Select the status for the work task.</inlineHelpText>
    <label>Work Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#78C953</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#666666</color>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>