force-app/main/default/objects/PF_Tasks__c/fields/PF_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>PF_Work_Type__c</fullName>
    <inlineHelpText>Select the type of work task.</inlineHelpText>
    <label>Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>VF Page/Component</fullName>
            </value>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Web services/Apex call outs</fullName>
            </value>
            <value>
                <fullName>Trigger/Trigger helper</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>UX Design</fullName>
            </value>
            <value>
                <fullName>UI Development</fullName>
            </value>
            <value>
                <fullName>Reporting &amp; Visualization</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>