force-app/main/default/objects/PF_Tasks__c/recordTypes/PF_Work_Task.recordType-meta.xml
<RecordType>
    <fullName>PF_Work_Task</fullName>
    <active>true</active>
    <description>Standard pForce record type.</description>
    <label>Work Task</label>
</RecordType>