force-app/main/default/objects/PF_Tasks__c/validationRules/Other_Complexity.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Complexity</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( PF_Complexity__c , &#39;Other&#39;)  &amp;&amp; ISBLANK( PF_Estimate_Hours__c )</errorConditionFormula>
    <errorMessage>Please enter &quot;Estimate Hours (When Complexity = Other)&quot; when Complexity is other.</errorMessage>
</ValidationRule>