force-app/main/default/objects/PF_Tasks__c/validationRules/Task_Dates_Lie_Between_Story_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Task_Dates_Lie_Between_Story_Dates</fullName>
    <active>false</active>
    <description>Work task start / end dates should lie between story dates.</description>
    <errorConditionFormula>(PF_Actual_Start_Date__c &lt; PF_Story__r.PF_Start_Date__c) ||
( PF_Actual_End_Date__c &gt; PF_Story__r.PF_End_Date__c )</errorConditionFormula>
    <errorMessage>Work task start / end dates should lie between story dates.</errorMessage>
</ValidationRule>