force-app/main/default/objects/PF_Tasks__c/listViews/PF_All.listView-meta.xml
<ListView>
    <fullName>PF_All</fullName>
    <columns>NAME</columns>
    <columns>PF_Work_Task_Number__c</columns>
    <columns>PF_Work_Type__c</columns>
    <columns>PF_Complexity__c</columns>
    <columns>PF_Assigned_To__c</columns>
    <columns>PF_Estimate_Hours__c</columns>
    <columns>PF_Work_Task_Status__c</columns>
    <columns>PF_Story__c</columns>
    <columns>PF_Sprint__c</columns>
    <columns>PF_Release__c</columns>
    <columns>PF_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>